--- a/css/styles.css
+++ b/css/styles.css
@@ -16,16 +16,14 @@ body {
     background-color: hsl(210, 50%, 85%);
 }
 
-h1 {
-    font-size: 1.2em;
-    margin-bottom: 1rem;
-}
-
-main {
+/* Background */
+.container {
+    display: flex;
+    flex-wrap: wrap;
     width: 375px;
     margin: auto;
     margin-top: 80px;
-    padding-bottom: 30px;
+    padding: 16px;
     justify-content: center;
     align-items: center;
     background-color: hsl(0, 0%, 100%);
@@ -33,36 +31,34 @@ main {
     max-width: 100%;
 }
 
-/* qr-code */
-img {
-    border-radius: 10px;
-    margin: 0.85rem;
-    height: 350px;
-    width: 350px;
-    max-width: 100%;
-    justify-items: center;
-}
-
 /* text */
-.heading {
-    font-size: large;
-    font-weight: 700;
+h1 {
     text-align: center;
-    margin-left: 1.2rem;
-    margin-right: 1.2rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    padding: 1rem;
     color: hsl(218, 44%, 22%);
     max-width: 100%;
 }
 
-.paragraph {
-    margin-bottom: 2rem;
-    margin-left: 1.2rem;
-    margin-right: 1.2rem;
-    font-size: 15px;
-    font-weight: 400;
+p {
     text-align: center;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 400;
+    margin: 1.2rem;
+    padding-bottom: 2rem;
     color: hsl(220, 15%, 55%);
-    padding-left: 1rem;
-    padding-right: 1rem;
     max-width: 100%;
-}    
+}
+
+/* qr-code */
+img {
+    display: block;
+    object-fit: cover;
+    max-width: 100%;
+    margin: auto;
+    border-radius: 1rem;
+}
